@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.10.0
 Date: ????
+  Features:
+    - [table] Added `table.get_or_insert()`
   Changes:
     - Converted from LDoc to EmmyLua annotations, enabling language server intellisense
     - [area] All functions will ensure that any passed areas have `left_top` and `right_bottom` keys, and will automatically convert ones that do not
